Add auth jwt
